--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ let prompt=localStorage.getItem("gemini_prompt");
 
 if(!apiKey||!prompt){alert("API情報未設定");return;}
 
-let res=await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=${apiKey}`,{
+let res=await fetch(`https://generativelanguage.googleapis.com/v1/models/gemini-1.5-flash:generateContent?key=${apiKey}`,{
 method:"POST",
 headers:{"Content-Type":"application/json"},
 body:JSON.stringify({
